--- a/include/header.html
+++ b/include/header.html
@@ -4,29 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오케이좋아 | 연예인봉사단</title>
+    <title>오케이좋아연예인봉사단</title>
     <link rel="stylesheet" href="../css/font.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/aos.css">
 
 
-    <link rel="canonical" href="테스트">
+    <link rel="canonical" href="오케이좋아연예인봉사단">
     <link rel="icon" href="../images/common/favicon.ico" type="image/x-icon"> <!-- favicon -->
 
-    <meta name="keywords" content="테스트">
-    <meta name="description" content="테스트">
+    <meta name="keywords" content="오케이좋아연예인봉사단">
+    <meta name="description" content="오케이좋아연예인봉사단">
     <meta name="author" content="urlLink">
 
     <meta property="og:type" content="website">
-    <meta property="og:description" content="테스트">
+    <meta property="og:description" content="오케이좋아연예인봉사단">
     <meta property="og:locale" content="ko_KR">
     <meta property="og:url" content="urlLink">
     <meta property="og:image" content="../images/common/og.png"> <!-- og -->
-    <meta property="og:title" content="테스트">
+    <meta property="og:title" content="오케이좋아연예인봉사단">
 
 
     <meta name="twitter:card" content="photo">
-    <meta name="twitter:title" content="테스트">
+    <meta name="twitter:title" content="오케이좋아연예인봉사단">
     <meta name="twitter:description" content="">
     <meta name="twitter:url" content="urlLink">
     <meta name="twitter:image" content="../images/common/og.png"> <!-- og -->
@@ -44,19 +44,18 @@
                     <li>
                         <a href="../about/okzzoa.html">소개</a>
                         <ul class="sub-menu">
-                            <!-- <li><a href="../about/okzzoa.html">연예인봉사단</a></li> -->
-                        <li><a href="../about/okzzoa.html">오케이좋아<br/>연예인봉사단</a></li>
+                            <li><a href="../about/okzzoa.html">오케이좋아<br />연예인봉사단</a></li>
                             <li><a href="../about/history.html">연혁</a></li>
                             <li><a href="../about/organization.html">조직도</a></li>
                             <li><a href="../about/ci.html">CI소개</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:alert('준비중입니다')">활동</a>
+                        <a href="../action/domestic.html">활동</a>
                         <ul class="sub-menu">
-                            <li><a href="javascript:alert('준비중입니다')">국내활동</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">해외활동</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">활동후기</a></li>
+                            <li><a href="../action/domestic.html">국내활동</a></li>
+                            <li><a href="../action/overseas.html">해외활동</a></li>
+                            <li><a href="../action/review.html">활동후기</a></li>
                         </ul>
                     </li>
                     <li>
@@ -69,17 +68,17 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:alert('준비중입니다')">캠페인</a>
+                        <a href="../campaign/list01.html">캠페인</a>
                         <ul class="sub-menu">
-                            <li><a href="javascript:alert('준비중입니다')">캠페인</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">캠페인 후기</a></li>
+                            <li><a href="../campaign/list01.html">캠페인</a></li>
+                            <li><a href="../campaign/list02.html">캠페인 후기</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:alert('준비중입니다')">소식</a>
+                        <a href="../news/list.html">소식</a>
                         <ul class="sub-menu">
-                            <li><a href="javascript:alert('준비중입니다')">공지사항</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">언론보도</a></li>
+                            <li><a href="../news/list.html">공지사항</a></li>
+                            <li><a href="../news/list.html">언론보도</a></li>
                         </ul>
                     </li>
                 </ul>
