--- a/include/footer.html
+++ b/include/footer.html
@@ -26,12 +26,12 @@
         <ul class="right">
             <li>
                 <a href="#none">
-                    <img src="" alt="instagram">
+                    <img src="../images/common/instagrame.svg" alt="instagram">
                 </a>
             </li> 
             <li>
                 <a href="#none">
-                    <img src="" alt="youtube">
+                    <img src="../images/common/youtube.svg" alt="youtube">
                 </a>
             </li>
         </ul>
