--- a/include/tabmenu.html
+++ b/include/tabmenu.html
@@ -27,16 +27,16 @@
                             } ?>"><a href="../about/okzzoa.html">소개</a></li>
                 <li class="<?php if ($PAGE_CODE_1 == "02") {
                                 echo 'none';
-                            } ?>"><a href="../">활동</a></li>
+                            } ?>"><a href="../action/domestic.html">활동</a></li>
                 <li class="<?php if ($PAGE_CODE_1 == "03") {
                                 echo 'none';
                             } ?>"><a href="../sponsor/index.html">후원</a></li>
                 <li class="<?php if ($PAGE_CODE_1 == "04") {
                                 echo 'none';
-                            } ?>"><a href="../">캠페인</a></li>
+                            } ?>"><a href="../campaign/list01.html">캠페인</a></li>
                 <li class="<?php if ($PAGE_CODE_1 == "05") {
                                 echo 'none';
-                            } ?>"><a href="../">소식</a></li>
+                            } ?>"><a href="../news/list.html">소식</a></li>
             </ul>
 
         </div>
@@ -122,13 +122,13 @@
                 ?>
                     <li class=<?php if ($PAGE_CODE_2 == "0201") {
                                     echo 'none';
-                                } ?>><a href="../">국내활동</a></li>
+                                } ?>><a href="../action/domestic.html">국내활동</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0202") {
                                     echo 'none';
-                                } ?>><a href="../">해외활동</a></li>
+                                } ?>><a href="../action/overseas.html">해외활동</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0203") {
                                     echo 'none';
-                                } ?>><a href="../">활동후기</a></li>
+                                } ?>><a href="../action/review.html">활동후기</a></li>
                 <?php
                 } else if ($PAGE_CODE_1 == "03") {
                 ?>
@@ -149,19 +149,19 @@
                 ?>
                     <li class=<?php if ($PAGE_CODE_2 == "0401") {
                                     echo 'none';
-                                } ?>><a href="../">캠페인</a></li>
+                                } ?>><a href="../campaign/list01.html">캠페인</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0402") {
                                     echo 'none';
-                                } ?>><a href="../">캠페인후기</a></li>
+                                } ?>><a href="../campaign/list02.html">캠페인후기</a></li>
                 <?php
                 } else if ($PAGE_CODE_1 == "05") {
                 ?>
                     <li class=<?php if ($PAGE_CODE_2 == "0501") {
                                     echo 'none';
-                                } ?>><a href="../">공지사항</a></li>
+                                } ?>><a href="../news/list.html">공지사항</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0502") {
                                     echo 'none';
-                                } ?>><a href="../">언론보도</a></li>
+                                } ?>><a href="../news/list.html">언론보도</a></li>
                 <?php } ?>
             </ul>
         </div>
