1차 퍼블완료(문의하기 팝업제외)

--- a/include/footer.html
+++ b/include/footer.html
@@ -25,12 +25,12 @@
         </div>
         <ul class="right">
             <li>
-                <a href="#none">
+                <a href="javascript:alert('준비중입니다');">
                     <img src="../images/common/instagrame.svg" alt="instagram">
                 </a>
             </li> 
             <li>
-                <a href="#none">
+                <a href="https://www.youtube.com/@OKZZOAOKZZOA" target="_blank">
                     <img src="../images/common/youtube.svg" alt="youtube">
                 </a>
             </li>
