--- a/include/header.html
+++ b/include/header.html
@@ -97,7 +97,7 @@
                 </ul>
                 <form action="../search/result.html">
                     <input type="text" placeholder="검색어를 입력해 주세요" required="" value="">
-                    <a href="#none">
+                    <a href="javascript:alert('준비중입니다');">
                         <img src="../images/common/search_icon.png" alt="검색어를 입력해 주세요">
                     </a>
                 </form>
