--- a/include/header.html
+++ b/include/header.html
@@ -77,8 +77,8 @@
                     <li>
                         <a href="../news/list.html">소식</a>
                         <ul class="sub-menu">
-                            <li><a href="../news/list.html">공지사항</a></li>
                             <li><a href="../news/list.html">언론보도</a></li>
+                            <li><a href="../news/list02.html">공지사항</a></li>
                         </ul>
                     </li>
                 </ul>
