--- a/include/tabmenu.html
+++ b/include/tabmenu.html
@@ -95,10 +95,10 @@
                 } ?>
 
                 <?php if ($PAGE_CODE_2 == "0501") {
-                    echo "공지사항";
+                    echo "언론보도";
                 } ?>
                 <?php if ($PAGE_CODE_2 == "0502") {
-                    echo "언론보도";
+                    echo "공지사항";
                 } ?>
             </span>
             <ul>
@@ -158,10 +158,11 @@
                 ?>
                     <li class=<?php if ($PAGE_CODE_2 == "0501") {
                                     echo 'none';
-                                } ?>><a href="../news/list.html">공지사항</a></li>
+                                } ?>><a href="../news/list.html">언론보도</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0502") {
                                     echo 'none';
-                                } ?>><a href="../news/list.html">언론보도</a></li>
+                                } ?>><a href="../news/list02.html">공지사항</a></li>
+
                 <?php } ?>
             </ul>
         </div>
