--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -3415,8 +3415,9 @@
         width: calc(100% - 40px);
         min-height: initial;
         height: calc(100% - 40px);
+        padding: 20px 0;
         .inner{
-            padding: 20px 30px;
+            padding: 0px 30px;
             .head {
                 padding-bottom: 20px;
                 .top{
@@ -3432,32 +3433,20 @@
                 }
         
                 h2 {
-                    font-size: 28px;
-                    font-weight: bold;
+                    font-size: 26px;
                 }
             }
         
             form {
-                width: 100%;
-                font-family: "Pretendard";
-        
                 .label_wrap {
-                    padding: 15px 0px;
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: flex-start;
-                    gap: 80px;
-                    border-bottom: 1px solid #dddddd;
+                    // padding: 10px 0px;
+                    gap: 20px;
         
                     .tit {
-                        font-size: 20px;
-                        font-weight: 600;
-                        min-width: 100px;
-                        width: 100px;
-                        height: 45px;
-                        display: flex;
-                        justify-content: flex-start;
-                        align-items: center;
+                        font-size: 18px;
+                        // min-width: 100px;
+                        // width: 100px;
+                        // height: 45px;
                     }
         
                     .label_box {
@@ -3468,167 +3457,236 @@
                         align-items: center;
                         min-height: 45px;
         
-                        label {
-                            display: flex;
-                            justify-content: flex-start;
-                            align-items: center;
-                            gap: 10px;
-                        }
-        
                         input[type="text"],
                         select {
-                            border: 1px solid #ddd;
-                            border-radius: 5px;
-                            width: 321px;
-                            height: 45px;
-                            padding: 0 20px;
-        
-                            &::placeholder {
-                                color: #aaa;
-                            }
+                            width: 300px;
+                            // height: 45px;
+                            padding: 0 15px;
+                            font-size: 16px;
                         }
         
                         &.cate {
-                            gap: 10px 50px;
+                            gap: 10px 30px;
         
                             input[type='radio'] {
-                                -webkit-appearance: none;
-                                -moz-animation: none;
-                                appearance: none;
-                                width: 25px;
-                                height: 25px;
-                                border-radius: 50%;
-                                border: 1px solid #ddd;
-        
+                                width: 23px;
+                                height: 23px;
                                 &:checked {
-                                    background-color: #ef7f00;
-                                    border: 7px solid #fff;
-                                    box-shadow: 0 0 0 1px #ddd;
+                                    // border: 7px solid #fff;
                                 }
                             }
         
                             p {
-                                font-size: 18px;
-                                font-weight: normal;
-                                color: #6b6b6b;
+                                font-size: 16px;
                             }
         
                         }
         
                         &.add {
                             label {
-                                flex-direction: column;
-                                align-items: flex-start;
-                                justify-content: center;
-        
+                                gap: 5px;
                                 .top {
-                                    input[type="text"] {
-                                        margin-right: 10px;
-                                    }
-        
+                                    gap: 5px;
                                     input[type="button"] {
-                                        padding: 0 20px;
-                                        background-color: #e42296;
-                                        height: 45px;
-                                        font-size: 18px;
-                                        color: #fff;
-                                        font-weight: normal;
-                                        cursor: pointer;
+                                        // height: 45px;
+                                        font-size: 16px;
                                     }
                                 }
         
                                 .bottom {
-                                    width: 100%;
-        
                                     input[type="text"] {
-                                        width: 100%;
-                                        margin-bottom: 10px;
-        
-                                        &:last-child {
-                                            margin-bottom: 0
-                                        }
+                                        margin-bottom: 5px;
                                     }
                                 }
                             }
                         }
         
                         &.phone {
-                            gap: 10px;
+                            gap: 5px;
         
                             select,
                             input[type="text"] {
-                                width: 105px;
+                                width: 95px;
                             }
                         }
         
                         &.mail {
                             gap: 2px;
-        
+                            font-size: 16px;
                             input[type='text'],
                             select {
-                                width: 140px;
+                                width: 120px;
                             }
         
                             select {
-                                margin-left: 8px;
+                                margin-left: 4px;
                             }
                         }
         
                         &.detail {
                             textarea {
-                                width: 100%;
-                                height: 160px;
-                                overflow-y: auto;
-                                padding: 20px;
-                                border: 1px solid #ddd;
-        
-                                &::placeholder {
-                                    color: #aaa;
-                                }
+                                height: 140px;
+                                padding: 15px;
+                                font-size: 16px;
                             }
                         }
                     }
                 }
         
                 .account_wrap {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
-                    padding: 25px;
-                    padding-right: 0;
+                    padding: 20px;
                     input[type="checkbox"] {
-                        width: 25px;
-                        height: 25px;
-                        border-radius: 3px;
-                        border: 1px solid #ddd;
-                        margin-right: 15px;
+                        width: 20px;
+                        height: 20px;
+                        margin-right: 10px;
                     }
         
                     label {
-                        @include drag-off;
-                        pointer-events: visible;
-                        font-size: 18px;
-                        font-weight: 600;
+                        font-size: 16px;
                     }
                 }
             }
         
         
             .submit {
-                font-family: inherit;
-                padding: 20px 140px;
-                display: inline-block;
-                margin: 50px auto 0;
-                text-align: center;
-                border-radius: 5px;
-                background-color: #f8b500;
-                color: #fff;
-                font-size: 26px;
-                cursor: pointer;
+                padding: 20px 100px;
+                margin: 40px auto 0;
+                font-size: 22px;
             }
         }
-        &.active{
-            display: flex
+    }
+}
+
+@media (max-width:620px){
+    .contact_popup {
+        width: calc(100% - 30px);
+        height: calc(100% - 30px);
+        .inner{
+            .head {
+                padding-bottom: 10px;
+                .top{
+                    margin-bottom: 20px;
+                    .logo {
+                        width: 100px;
+                    }
+                    .close{
+                        width: 30px;
+                        height: 30px;
+                    }
+    
+                }
+        
+                h2 {
+                    font-size: 22px;
+                }
+            }
+        
+            form {
+                .label_wrap {
+                    // padding: 10px 0px;
+                    gap: 10px;
+                    flex-direction: column;
+                    .tit {
+                        font-size: 16px;
+                        min-width: initial;
+                        width: 100%;
+                        height: initial;
+                    }
+        
+                    .label_box {
+                        min-height: initial;
+        
+                        input[type="text"],
+                        select {
+                            max-width: 300px;
+                            width: 100%;
+                            height: 40px;
+                            padding: 0 10px;
+                            font-size: 14px;
+                        }
+        
+                        &.cate {
+                            gap: 8px 20px;
+        
+                            input[type='radio'] {
+                                width: 20px;
+                                height: 20px;
+                                &:checked {
+                                    border: 5px solid #fff;
+                                }
+                            }
+        
+                            p {
+                                font-size: 14px;
+                            }
+        
+                        }
+        
+                        &.add {
+                            label {
+                                .top {
+                                    width: 100%;
+                                    input[type="text"]{
+                                        width: 100%;
+                                        max-width: initial;
+                                    }
+                                    input[type="button"] {
+                                        height: 40px;
+                                        font-size: 14px;
+                                    }
+                                }
+        
+                                .bottom {
+                                    input[type="text"] {
+                                        max-width: initial;
+                                    }
+                                }
+                            }
+                        }
+        
+                        &.phone {
+                            select,
+                            input[type="text"] {
+                                width: 90px;
+                            }
+                        }
+        
+                        &.mail {
+                            font-size: 14px;
+                            input[type='text'],
+                            select {
+                                width: calc(100% / 3);
+                            }
+        
+                            select {
+                                margin-left: 3px;
+                            }
+                        }
+        
+                        &.detail {
+                            textarea {
+                                height: 130px;
+                                padding: 10px;
+                                font-size: 14px;
+                            }
+                        }
+                    }
+                }
+        
+                .account_wrap {
+                    padding: 15px;
+                    label {
+                        font-size: 14px;
+                    }
+                }
+            }
+        
+        
+            .submit {
+                margin: 30px auto 0;
+                padding: 15px 80px;
+                font-size: 20px;
+            }
         }
     }
 }
@@ -4582,6 +4640,13 @@
                 }
 
             }
+        }
+    }
+    .contact_popup {
+        @include fullsize;
+        padding: 15px 0;
+        .inner{
+            padding: 0 20px;            
         }
     }
 }
