--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2640,7 +2640,7 @@ main {
                         width: 321px;
                         height: 45px;
                         padding: 0 20px;
-    
+                        font-size: 18px;
                         &::placeholder {
                             color: #aaa;
                         }
@@ -2680,10 +2680,10 @@ main {
                             justify-content: center;
     
                             .top {
-                                input[type="text"] {
-                                    margin-right: 10px;
-                                }
-    
+                                display: flex;
+                                justify-content: flex-start;
+                                align-items: center;
+                                gap: 10px;
                                 input[type="button"] {
                                     padding: 0 20px;
                                     background-color: #e42296;
@@ -2721,7 +2721,7 @@ main {
     
                     &.mail {
                         gap: 2px;
-    
+                        font-size: 18px;
                         input[type='text'],
                         select {
                             width: 140px;
@@ -2735,11 +2735,12 @@ main {
                     &.detail {
                         textarea {
                             width: 100%;
+                            // min-height: 160px;
                             height: 160px;
                             overflow-y: auto;
                             padding: 20px;
                             border: 1px solid #ddd;
-    
+                            font-size: 18px;
                             &::placeholder {
                                 color: #aaa;
                             }
@@ -2757,7 +2758,7 @@ main {
                 input[type="checkbox"] {
                     width: 25px;
                     height: 25px;
-                    border-radius: 3px;
+                    border-radius: 5px;
                     border: 1px solid #ddd;
                     margin-right: 15px;
                 }
