--- a/include/header.html
+++ b/include/header.html
@@ -15,12 +15,12 @@
 
     <meta name="keywords" content="오케이좋아연예인봉사단">
     <meta name="description" content="오케이좋아연예인봉사단">
-    <meta name="author" content="urlLink">
+    <meta name="author" content="https://okzzoa.mycafe24.com/">
 
     <meta property="og:type" content="website">
     <meta property="og:description" content="오케이좋아연예인봉사단">
     <meta property="og:locale" content="ko_KR">
-    <meta property="og:url" content="urlLink">
+    <meta property="og:url" content="https://okzzoa.mycafe24.com/">
     <meta property="og:image" content="../images/common/og.png"> <!-- og -->
     <meta property="og:title" content="오케이좋아연예인봉사단">
 
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="photo">
     <meta name="twitter:title" content="오케이좋아연예인봉사단">
     <meta name="twitter:description" content="">
-    <meta name="twitter:url" content="urlLink">
+    <meta name="twitter:url" content="https://okzzoa.mycafe24.com/">
     <meta name="twitter:image" content="../images/common/og.png"> <!-- og -->
 
 </head>
